# python-elasticsearch

./: .coverage  .env  .gitignore  Dockerfile  README.md  config.yaml  create-certs.yml  create-topic-got.sh  create-topic-run.sh  custom-opensearch-dashboards.yml  docker-build.sh  docker-compose.yml  docker-run-entrypoints.sh  docker-run-tests.sh  docker-run.sh  docker-tests.sh  injector.py  main.py  pyproject.toml  pytest.sh  service_start.sh  wait_for_es.sh
Curator/: Job-run-delete-data.sh  README.md  curator-run-job.sh  delete-indices.yml
ansible/: README.md  elastic.yml  inventory.yml
bookmarks/: bookmarks_12_15_23.html
config/: config.py  log_config.py
controller/: cluster_estimate_controller.py  es_search_controller.py
gRPC/: api.py  client.py  gRPC.md  server.py
job/: es_job.py  job.py
kafka/: READMD.md  cluster-consumer.py  cluster-producer.py  docker-compose.yml  logstash-run.sh  logstash.conf
local-diagnostics-20231215-160457/: alias.json  allocation.json  allocation_explain.json  allocation_explain_disk.json  cluster_health.json  cluster_settings.json  cluster_settings_defaults.json  cluster_stats.json  count.json  fielddata_stats.json  indices_stats.json  licenses.json  manifest.json  mapping.json  master.json  nodes.json  nodes_hot_threads.txt  nodes_stats.json  nodes_usage.json  pipelines.json  plugins.json  recovery.json  segments.json  settings.json  shard_stores.json  shards.json  tasks.json  templates.json  version.json
repository/: schemas.py
tests/: conftest.py  test_api.py  test_elasticsearch.py  test_search.py  test_search_api.py
(+51 files in other folders)
