[tool.poetry]
name = "python-elasticsearch"
version = "0.1.0"
description = ""
authors = ["euiyounghwang <marieuig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pytz = "^2023.3.post1"
elasticsearch = "7.9.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.2"
pytest = "^7.4.3"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
