[tool.poetry]
name = "python-elasticsearch"
version = "0.1.0"
description = ""
authors = ["euiyounghwang <marieuig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pytz = "^2023.3.post1"
python-dotenv = "^1.0.0"
numpy = "^1.26.2"
pytest = "^7.4.3"
pyyaml = "^6.0.1"
httpx = "^0.25.2"
pytest-cov = "^4.1.0"
elasticsearch = "7.10"
pandas = "^2.1.4"
opensearch-py = "^2.4.2"
certifi = "^2023.11.17"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
pytest-board = "^0.1.0"
gevent = "^23.9.1"
bottle = "^0.12.25"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
